--- a/LoginSignupUI/LoginSignupUI/Base.lproj/Main.storyboard
+++ b/LoginSignupUI/LoginSignupUI/Base.lproj/Main.storyboard
@@ -42,26 +42,26 @@
                                 <rect key="frame" x="0.0" y="491" width="414" height="275"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let’s connect with each other" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EfC-LM-fFq">
-                                        <rect key="frame" x="29" y="28" width="356" height="109.5"/>
+                                        <rect key="frame" x="29" y="15" width="356" height="109.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chat makes it easy to get work done where the conversation is happening." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXt-78-Vro">
-                                        <rect key="frame" x="42" y="147.5" width="330" height="38.5"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                        <rect key="frame" x="42" y="129.5" width="330" height="46.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                         <color key="textColor" red="0.56862745100000001" green="0.56862745100000001" blue="0.56862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="ZXt-78-Vro" firstAttribute="top" secondItem="EfC-LM-fFq" secondAttribute="bottom" constant="10" id="K31-Cu-5nT"/>
+                                    <constraint firstItem="ZXt-78-Vro" firstAttribute="top" secondItem="EfC-LM-fFq" secondAttribute="bottom" constant="5" id="K31-Cu-5nT"/>
                                     <constraint firstAttribute="trailing" secondItem="EfC-LM-fFq" secondAttribute="trailing" constant="29" id="MNu-J4-NYd"/>
                                     <constraint firstItem="EfC-LM-fFq" firstAttribute="leading" secondItem="E50-KH-iZ7" secondAttribute="leading" constant="29" id="brG-Q3-iDY"/>
                                     <constraint firstAttribute="trailing" secondItem="ZXt-78-Vro" secondAttribute="trailing" constant="42" id="gUK-hO-Tth"/>
                                     <constraint firstItem="ZXt-78-Vro" firstAttribute="leading" secondItem="E50-KH-iZ7" secondAttribute="leading" constant="42" id="hAM-jD-mCO"/>
-                                    <constraint firstItem="EfC-LM-fFq" firstAttribute="top" secondItem="E50-KH-iZ7" secondAttribute="top" constant="28" id="qK9-PP-o5u"/>
+                                    <constraint firstItem="EfC-LM-fFq" firstAttribute="top" secondItem="E50-KH-iZ7" secondAttribute="top" constant="15" id="qK9-PP-o5u"/>
                                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ZXt-78-Vro" secondAttribute="bottom" constant="20" id="uCO-YI-oZr"/>
                                 </constraints>
                             </view>
@@ -177,77 +177,72 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aDF-Fd-D2I">
-                                <rect key="frame" x="25" y="701" width="364" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="25" y="690" width="364" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UR0-Ce-fh8">
-                                <rect key="frame" x="25" y="654.5" width="364" height="38.5"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b3x-xY-8Xu">
-                                        <rect key="frame" x="4" y="8.5" width="19.5" height="22"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" image="square" catalog="system"/>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by creating account i agree " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eeO-xi-Ytb">
-                                        <rect key="frame" x="27.5" y="8.5" width="202" height="22"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M2D-Ym-kes">
-                                        <rect key="frame" x="231.5" y="4.5" width="132.5" height="30"/>
-                                        <color key="tintColor" red="0.30196078431372547" green="0.85098039215686272" blue="0.41176470588235292" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal">
-                                            <attributedString key="attributedTitle">
-                                                <fragment content="terms &amp; conditions">
-                                                    <attributes>
-                                                        <font key="NSFont" size="13" name="AvenirNext-Regular"/>
-                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                                        <integer key="NSUnderline" value="1"/>
-                                                    </attributes>
-                                                </fragment>
-                                            </attributedString>
-                                        </state>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wwF-Nc-LBZ">
+                                <rect key="frame" x="25" y="650.5" width="19.5" height="22"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <state key="normal" image="square" catalog="system"/>
+                                <connections>
+                                    <action selector="checkBtnTapped:" destination="ua1-dV-b9z" eventType="touchUpInside" id="GkQ-Z3-wW8"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="by creating account i agree " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JNq-9Y-6KE">
+                                <rect key="frame" x="49.5" y="650.5" width="178" height="19.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yLv-hs-CV4">
+                                <rect key="frame" x="229.5" y="650.5" width="120" height="19"/>
                                 <constraints>
-                                    <constraint firstItem="eeO-xi-Ytb" firstAttribute="centerY" secondItem="UR0-Ce-fh8" secondAttribute="centerY" id="9XG-Qb-tSQ"/>
-                                    <constraint firstItem="M2D-Ym-kes" firstAttribute="leading" secondItem="eeO-xi-Ytb" secondAttribute="trailing" constant="2" id="Dqz-Dx-LBm"/>
-                                    <constraint firstItem="M2D-Ym-kes" firstAttribute="centerY" secondItem="UR0-Ce-fh8" secondAttribute="centerY" id="MyE-nV-NGS"/>
-                                    <constraint firstAttribute="trailing" secondItem="M2D-Ym-kes" secondAttribute="trailing" id="Z7n-r5-FIu"/>
-                                    <constraint firstItem="b3x-xY-8Xu" firstAttribute="centerY" secondItem="UR0-Ce-fh8" secondAttribute="centerY" id="m5A-Ek-mDT"/>
-                                    <constraint firstItem="b3x-xY-8Xu" firstAttribute="leading" secondItem="UR0-Ce-fh8" secondAttribute="leading" constant="4" id="yse-mc-Yn3"/>
-                                    <constraint firstItem="eeO-xi-Ytb" firstAttribute="leading" secondItem="b3x-xY-8Xu" secondAttribute="trailing" constant="4" id="zzK-Nu-ljf"/>
+                                    <constraint firstAttribute="height" constant="19" id="Rx8-Xz-gfi"/>
                                 </constraints>
-                            </view>
+                                <state key="normal">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="terms &amp; conditions">
+                                            <attributes>
+                                                <color key="NSColor" red="0.30196078431372547" green="0.85098039215686272" blue="0.41176470588235292" alpha="1" colorSpace="calibratedRGB"/>
+                                                <font key="NSFont" size="14" name="AvenirNext-Regular"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                <integer key="NSUnderline" value="1"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Z2u-CN-UQC"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="UR0-Ce-fh8" firstAttribute="top" secondItem="bni-qp-Q6b" secondAttribute="bottom" constant="12" id="16D-vQ-r9P"/>
                             <constraint firstItem="gbf-un-EH7" firstAttribute="centerX" secondItem="7wj-qi-ZAg" secondAttribute="centerX" id="5fm-sW-ye5"/>
                             <constraint firstItem="Z2u-CN-UQC" firstAttribute="trailing" secondItem="aDF-Fd-D2I" secondAttribute="trailing" constant="25" id="6oe-fd-293"/>
                             <constraint firstItem="Kga-zL-fuQ" firstAttribute="leading" secondItem="Z2u-CN-UQC" secondAttribute="leading" constant="25" id="9iD-hj-h3r"/>
-                            <constraint firstItem="UR0-Ce-fh8" firstAttribute="trailing" secondItem="bni-qp-Q6b" secondAttribute="trailing" id="GYv-qK-99K"/>
+                            <constraint firstItem="yLv-hs-CV4" firstAttribute="top" secondItem="bni-qp-Q6b" secondAttribute="bottom" constant="8" id="Gnx-ce-uXo"/>
                             <constraint firstItem="k9w-IG-frg" firstAttribute="top" secondItem="gbf-un-EH7" secondAttribute="bottom" constant="8" symbolic="YES" id="Hey-rH-cHI"/>
                             <constraint firstItem="Z2u-CN-UQC" firstAttribute="bottom" secondItem="Kga-zL-fuQ" secondAttribute="bottom" constant="25" id="L6c-qm-Cbh"/>
-                            <constraint firstItem="UR0-Ce-fh8" firstAttribute="leading" secondItem="bni-qp-Q6b" secondAttribute="leading" id="OwM-la-6uZ"/>
-                            <constraint firstItem="aDF-Fd-D2I" firstAttribute="top" secondItem="UR0-Ce-fh8" secondAttribute="bottom" constant="8" symbolic="YES" id="RdM-ah-B59"/>
                             <constraint firstItem="k9w-IG-frg" firstAttribute="centerX" secondItem="7wj-qi-ZAg" secondAttribute="centerX" id="Td5-a9-jCz"/>
+                            <constraint firstItem="aDF-Fd-D2I" firstAttribute="top" secondItem="JNq-9Y-6KE" secondAttribute="bottom" constant="20" id="Wyj-96-tjC"/>
                             <constraint firstItem="aDF-Fd-D2I" firstAttribute="leading" secondItem="Z2u-CN-UQC" secondAttribute="leading" constant="25" id="X6x-Dv-lG3"/>
+                            <constraint firstItem="wwF-Nc-LBZ" firstAttribute="top" secondItem="bni-qp-Q6b" secondAttribute="bottom" constant="8" id="Xat-I8-TCm"/>
                             <constraint firstItem="Z2u-CN-UQC" firstAttribute="trailing" secondItem="Kga-zL-fuQ" secondAttribute="trailing" constant="25" id="boZ-kS-pY7"/>
+                            <constraint firstItem="wwF-Nc-LBZ" firstAttribute="leading" secondItem="bni-qp-Q6b" secondAttribute="leading" id="c6h-Mz-L7f"/>
                             <constraint firstItem="bni-qp-Q6b" firstAttribute="leading" secondItem="Z2u-CN-UQC" secondAttribute="leading" constant="25" id="fA8-BU-c8m"/>
+                            <constraint firstItem="yLv-hs-CV4" firstAttribute="leading" secondItem="JNq-9Y-6KE" secondAttribute="trailing" constant="2" id="fQb-lH-dzS"/>
                             <constraint firstItem="Z2u-CN-UQC" firstAttribute="trailing" secondItem="bni-qp-Q6b" secondAttribute="trailing" constant="25" id="gb2-wm-PYK"/>
                             <constraint firstItem="gbf-un-EH7" firstAttribute="top" secondItem="Z2u-CN-UQC" secondAttribute="top" constant="40" id="icO-Vc-jQy"/>
-                            <constraint firstItem="Kga-zL-fuQ" firstAttribute="top" secondItem="aDF-Fd-D2I" secondAttribute="bottom" constant="57.5" id="nNt-ah-SWU"/>
+                            <constraint firstItem="JNq-9Y-6KE" firstAttribute="top" secondItem="bni-qp-Q6b" secondAttribute="bottom" constant="8" id="lVa-J4-HYJ"/>
+                            <constraint firstItem="JNq-9Y-6KE" firstAttribute="leading" secondItem="wwF-Nc-LBZ" secondAttribute="trailing" constant="5" id="llo-Vb-OBG"/>
+                            <constraint firstItem="Kga-zL-fuQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="aDF-Fd-D2I" secondAttribute="bottom" constant="20" id="nNt-ah-SWU"/>
                             <constraint firstItem="bni-qp-Q6b" firstAttribute="top" secondItem="k9w-IG-frg" secondAttribute="bottom" constant="42" id="qmy-LB-06C"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="hce-ze-GrV"/>
                     <connections>
+                        <outlet property="checkBtn" destination="wwF-Nc-LBZ" id="Ofw-KH-4if"/>
                         <outlet property="confirmPassTextField" destination="8Po-M9-d8w" id="dF7-Qm-2QK"/>
                         <outlet property="countryTextField" destination="Po6-Y3-bfE" id="RYT-Qs-d7r"/>
                         <outlet property="emailTextField" destination="O1n-lQ-lU5" id="Z6h-kv-AU7"/>
